--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sri Lanka tours</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: #155263;">
+    <div class="container" align="center">
     <h1>Sri Lanka</h1>
     <h5>Island country in south Asia</h5>
-    <img src="/images/images.png" alt="">
+    <img style="height: 150px;" src="/images/slflag.png" alt="">
     <h1>Experence the vibrant culture and breathtaking landscapes of Sri Lanka</h1>
     <h4>Join our community and share yout journey through the stunning vistas of this island paradise.</h4>
-    <button>Start your Journey</button>
+    <br><br>
+    <a class="btn btn-primary" href="#" role="button">Start your journey</a>
+</div>
     <video src=""></video>
     <h1>Gallery of wonders</h1>
     <h4>Discover the beauty of Sri Lanka through our curated image collection.</h4>
@@ -53,32 +57,32 @@
             <th>Additional Information</th>
         </tr>
         <tr>
+            <td>Official Name</td>
+            <td>Democratic Socialist Republic of Sri Lanka</td>
             <td></td>
+        </tr>
+        <tr>
+            <td>Capital</td>
+            <td>Sri Jayawardhanapura Kotte</td>
+            <td>(administrative), Colombo(Commertial)</td>
+        </tr>
+        <tr>
+            <td>Area</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+            <td>Population</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+            <td>Languages</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
-            <td></td>
+            <td>Currency</td>
             <td></td>
             <td></td>
         </tr>
@@ -121,17 +125,17 @@
             
         </tr>
         <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
+            <td>UNESCO world heritage sites</td>
             <td></td>
             <td></td>
         </tr>
         <tr>
+            <td>Natural Resources</td>
             <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Cultural Festivals</td>
             <td></td>
             <td></td>
         </tr>
@@ -146,7 +150,7 @@
 
 
 
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
 </body>
 </html>
